--- a/src/webview/index.html
+++ b/src/webview/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'none'; style-src ${webview.cspSource} 'unsafe-inline'; script-src 'nonce-${nonce}';">
     <link rel="stylesheet" href="${styleUri}">
+    <link rel="stylesheet" href="${sumiUri}">
     <title>AI 101 HUD</title>
 </head>
 
