--- a/src/webview/index.html
+++ b/src/webview/index.html
@@ -19,6 +19,9 @@
         <div id="agent-hud">
             <!-- Agents will be injected here -->
         </div>
+        <div class="focus-mode-indicator">
+            🎯 Focus Mode
+        </div>
     </div>
     <script nonce="${nonce}" src="${scriptUri}"></script>
 </body>
