--- a/src/webview/index.html
+++ b/src/webview/index.html
@@ -8,6 +8,7 @@
         content="default-src 'none'; style-src ${webview.cspSource} 'unsafe-inline'; script-src 'nonce-${nonce}';">
     <link rel="stylesheet" href="${styleUri}">
     <link rel="stylesheet" href="${sumiUri}">
+    <link rel="stylesheet" href="${performanceModeStyleUri}">
     <title>AI 101 HUD</title>
 </head>
 
