--- a/src/webview/index.html
+++ b/src/webview/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="${styleUri}">
     <link rel="stylesheet" href="${sumiUri}">
     <link rel="stylesheet" href="${performanceModeStyleUri}">
+    <link rel="stylesheet" href="${colorblindModeStyleUri}">
     <title>AI 101 HUD</title>
 </head>
 
