--- a/src/webview/index.html
+++ b/src/webview/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="${sumiUri}">
     <link rel="stylesheet" href="${performanceModeStyleUri}">
     <link rel="stylesheet" href="${colorblindModeStyleUri}">
+    <link rel="stylesheet" href="${timelineUri}">
     <title>AI 101 HUD</title>
 </head>
 
