--- a/src/webview/index.html
+++ b/src/webview/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="${performanceModeStyleUri}">
     <link rel="stylesheet" href="${colorblindModeStyleUri}">
     <link rel="stylesheet" href="${timelineUri}">
+    <link rel="stylesheet" href="${tooltipUri}">
     <link rel="stylesheet" href="${accessibilityUri}">
     <title>AI 101 HUD</title>
 </head>
